--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Strata by HTML5 UP</title>
+		<title>Rudy LUCAS</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -18,10 +18,9 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Strata</strong>, a super simple<br />
-					responsive site template freebie<br />
-					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+					<a href="#" class="image avatar"><img src="images/photocv.jpg" alt="" /></a>
+					<h1><strong>Rudy LUCAS</strong></h1>
+					<p>543 rue de l’Exode 50 000 SAINT-LO <br />Née le 28/09/1995 <br />Tél : 06.36.66.99.10 <br />Email : rudylucas14000@gmail.com <br />Titulaire du PERMIS B </p>
 				</div>
 			</header>
 
@@ -31,32 +30,46 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<h2>Curriculum Vitae</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>Je suis actuellement étudiante en Licence Professionnelle Management de Projet Informatique et Commercial à l'IUT de LANNION</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<!--<li><a href="#" class="button">Learn More</a></li>-->
 						</ul>
 					</section>
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Recent Work</h2>
+						<h2>Expériences Professionnelles</h2>
 						<div class="row">
 							<article class="6u 12u$(xsmall) work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+<!-- 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a> -->
+								<ul>
+									<li><p>Juillet-Août 2017 (Crédit-Mutuel) COUTANCES <br />Back office</p></li>
+									<li><p>02 Juin - 30 Juin 2017 (Essilor France) VINCENNES <br /> Organisation des deux Road Show Varilux Tour Essilor</p></li>
+									<li><p>10 Avril - 02 Juin 2017 (Essilor France) VINCENNES <br />  Stage d'organisation des deux Road Show Varilux Tour Essilor</p></li>
+									<li><p>01 Septembre - fin Juin 2016 - 2017 (DUT TC Campus 2) CAEN <br /> Organisation des 50 ans des départements de l'IUT de Caen</p></li>
+									<li><p>06 - 30 Juillet 2016 (Credit-Mutuel) MARIGNY et CONDE-SUR-VIRE <br /> Conseiller clientèle acceuil</p></li>
+								</ul>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+<!-- 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a> -->
+<!-- 								<h3>Ultricies lacinia interdum</h3> -->
+								<ul>
+									<li><p>17 Mai - 06 Juin 2016 (Beauty Sucess) SAINT LO <br /> Stage de vente</p></li>
+									<li><p>11 - 12 Octobre 2015 (Concession Peugeot Mary Automobiles) SAINT-LO <br /> Hôtesse, acceuil client</p></li>
+									<li><p>Année 2015 (IUT TC) CAEN <br /> Mission de distribution de flyers</p></li>
+									<li><p>Juillet - Août 2015 (Crédit-Mutuel) TORIGNY SUR VIRE <br /> Conseiller clientèle acceuil</p></li>
+									<li><p>4 Juillet - 8 juillet 2015 (Lycée Pierre et Marie Curie) SAINT-LO <br /> Secrétariat du Bac</p></li>
+									<li><p>10 Juillet 2014 - 10 août 2014 (Hôtel du Vhâteau) SARLAT-LA-CADENA <br /> Serveuse, hôtesse</p></li>
+								</ul>
 							</article>
+							
+							<h2>Compétences</h2>
+							
 							<article class="6u 12u$(xsmall) work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
+<!-- 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a> -->
+								<h3>Professionnelles</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
