--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
 <!-- 								<h3>Ultricies lacinia interdum</h3> -->
 								<ul>
 									<li><p>17 Mai - 06 Juin 2016 (Beauty Sucess) SAINT LO <br /> Stage de vente</p></li>
-									<li><p>11 - 12 Octobre 2015 (Concession Peugeot Mary Automobiles) SAINT-LO <br /> Hôtesse, acceuil client</p></li>
+									<li><p>11 - 12 Octobre 2015 (Concession Peugeot) SAINT-LO <br /> Hôtesse, acceuil client</p></li>
 									<li><p>Année 2015 (IUT TC) CAEN <br /> Mission de distribution de flyers</p></li>
 									<li><p>Juillet - Août 2015 (Crédit-Mutuel) TORIGNY SUR VIRE <br /> Conseiller clientèle acceuil</p></li>
 									<li><p>4 Juillet - 8 juillet 2015 (Lycée Pierre et Marie Curie) SAINT-LO <br /> Secrétariat du Bac</p></li>
-									<li><p>10 Juillet 2014 - 10 août 2014 (Hôtel du Vhâteau) SARLAT-LA-CADENA <br /> Serveuse, hôtesse</p></li>
+									<li><p>10 Juillet 2014 - 10 août 2014 (Hôtel du Château) SARLAT <br /> Serveuse, hôtesse</p></li>
 								</ul>
 							</article>
 							
@@ -69,15 +69,24 @@
 							
 							<article class="6u 12u$(xsmall) work-item">
 <!-- 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a> -->
-								<h3>Professionnelles</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+<!-- 								<h3>Professionnelles</h3> -->
+								<ul>
+									<li><p><h3>Professionnelles</h3> <br /> Gestion de la compatabilité <br /> Bases de droit, économie, fiscalité <br /> Management, Marketing et Négociation Vente Achat</p></li>
+									<li><p><h3>Langues</h3> <br /> Anglais : Base B2 <br /> Espagnol : Base B1</p></li>
+									<li><p><h3>Informatique</h3> <br /> Bureautiques : Word, Excel,PowerPoint <br /> Logiciels : Ciel, GANTT, Trello</p></li>
+								</ul>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+<!-- 								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a> -->
+<!-- 								<h3>Quam neque phasellus</h3> -->
+								<ul>
+									<li><p>2017 - 2018 <br /> Licence Management de projet Informatique et Commercial (MIC) <br />IUT de LANNION (22)</p></li>
+									<li><p>2015 - 2017 <br /> DUT Techniques de Commercialisation (TC) 2ème année <br /> IUT de CAEN (14)</p></li>
+									<li><p>2014 - 2015 <br /> DUT Gestion des Entreprises et Administrations (GEA) 1ère année <br /> IUT de CAEN (14)</p></li>
+									<li><p>2014 <br /> Baccalauréat Sciences et Technologies du Management et de la Gestion (STMG) option Gestion-Finance <br /> Lycée Pierre et Marie Curie - SAINT-LO(50)</p></li>
+								</ul>
 							</article>
-							<article class="6u 12u$(xsmall) work-item">
+<!-- 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
 								<h3>Nunc enim commodo aliquet</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
@@ -86,7 +95,7 @@
 								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
 								<h3>Risus ornare lacinia</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
+							</article> -->
 						</div>
 						<ul class="actions">
 							<li><a href="#" class="button">Full Portfolio</a></li>
