--- a/index.html
+++ b/index.html
@@ -85,20 +85,16 @@
 									<li><p>2014 - 2015 <br /> DUT Gestion des Entreprises et Administrations (GEA) 1ère année <br /> IUT de CAEN (14)</p></li>
 									<li><p>2014 <br /> Baccalauréat Sciences et Technologies du Management et de la Gestion (STMG) option Gestion-Finance <br /> Lycée Pierre et Marie Curie - SAINT-LO(50)</p></li>
 								</ul>
-							</article>
-<!-- 							<article class="6u 12u$(xsmall) work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-								<h3>Nunc enim commodo aliquet</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="6u$ 12u$(xsmall) work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
-								<h3>Risus ornare lacinia</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article> -->
+							</article>						
 						</div>
-						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
+						
+						<div class="row">
+							<h2>Centres d'intérêt</h2>
+							<p>Sports (dance ; volley-ball ; salle de sport); Musiques ; Voyager ; Cuisiner </p>
+						</div>
+						
+						<ul class="actions" style="position: center;">
+							<li><a target="_blank" href="images/Curriculum-Vitae.pdf" class="button">Télécharger</a></li>
 						</ul>
 					</section>
 
