--- a/index.html
+++ b/index.html
@@ -90,11 +90,16 @@
 						
 						<div class="row">
 							<h2>Centres d'intérêt</h2>
-							<p>Sports (dance ; volley-ball ; salle de sport); Musiques ; Voyager ; Cuisiner </p>
+							<ul>
+								<li><p>Sports (dance ; volley-ball ; salle de sport)</p></li>
+								<li><p>Musiques</p></li>
+								<li><p>Voyager</p></li>
+								<li><p>Cuisiner</p></li>
+							</ul>
 						</div>
 						
-						<ul class="actions" style="position: center;">
-							<li><a target="_blank" href="images/Curriculum-Vitae.pdf" class="button">Télécharger</a></li>
+						<ul class="actions">
+							<li><a target="_blank" href="images/Curriculum-Vitae.pdf" class="button"  style="position: center;">Télécharger</a></li>
 						</ul>
 					</section>
 
