--- a/index.html
+++ b/index.html
@@ -89,17 +89,25 @@
 						</div>
 						
 						<div class="row">
-							<h2>Centres d'intérêt</h2>
-							<ul>
-								<li><p>Sports (dance ; volley-ball ; salle de sport)</p></li>
-								<li><p>Musiques</p></li>
-								<li><p>Voyager</p></li>
-								<li><p>Cuisiner</p></li>
-							</ul>
+							<article class="6u$ 12u$(xsmall) work-item">
+								<h2>Centres d'intérêt</h2>
+								<ul>
+									<li><p>Sports (dance ; volley-ball ; salle de sport)</p></li>
+									<li><p>Musiques</p></li>
+									<li><p>Voyager</p></li>
+									<li><p>Cuisiner</p></li>
+								</ul>
+							</article>							
+							<article class="6u$ 12u$(xsmall) work-item">
+								<ul>
+									<li><p>Voyager</p></li>
+									<li><p>Cuisiner</p></li>
+								</ul>
+							</article>
 						</div>
 						
 						<ul class="actions">
-							<li><a target="_blank" href="images/Curriculum-Vitae.pdf" class="button"  style="position: center;">Télécharger</a></li>
+							<li><a target="_blank" href="images/Curriculum-Vitae.pdf" class="button" style="display:block;  margin:auto;">Télécharger mon CV</a></li>
 						</ul>
 					</section>
 
