--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 							<h2>Curriculum Vitae</h2>
 						</header>
 						<p>Je suis actuellement étudiante en Licence Professionnelle Management de Projet Informatique et Commercial à l'IUT de LANNION</p>
-						<ul class="actions">
-							<!--<li><a href="#" class="button">Learn More</a></li>-->
-						</ul>
+<!-- 						<ul class="actions">
+							<li><a href="#" class="button">Learn More</a></li>
+						</ul> -->
 					</section>
 
 				<!-- Two -->
@@ -89,19 +89,21 @@
 						</div>
 						
 						<div class="row">
-							<article class="6u$ 12u$(xsmall) work-item">
+							<article class="6u 12u$(xsmall) work-item">
+<!-- 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a> -->
 								<h2>Centres d'intérêt</h2>
 								<ul>
 									<li><p>Sports (dance ; volley-ball ; salle de sport)</p></li>
 									<li><p>Musiques</p></li>
 								</ul>
-							</article>							
+							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
+<!-- 								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a> -->
 								<ul>
 									<li><p>Voyager</p></li>
 									<li><p>Cuisiner</p></li>
 								</ul>
-							</article>
+							</article>						
 						</div>
 						
 						<ul class="actions">
