--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
 				<!-- Three -->
 					<section id="three">
-						<h2>contact</h2>
+						<h2>Contact</h2>
 <!-- 						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p> -->
 						<div class="row">
 							<div class="12u 12u$(small)">
@@ -125,7 +125,7 @@
 										<div class="12u$"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
 									</div>
 								</form>
-								<ul class="actions">
+								<ul class="actions" style="text-align: center;">
 									<li><input type="submit" value="Envoyer le message" /></li>
 								</ul>
 							</div>
@@ -156,8 +156,8 @@
 				<div class="inner">
 					<ul class="icons">
 <!-- 						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li> -->
-						<li><a href="https://www.facebook.com/rudy.lucas.58" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="https://www.instagram.com/rudylucas/?hl=fr" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a target="_blank" href="https://www.facebook.com/rudy.lucas.58" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a target="_blank" href="https://www.instagram.com/rudylucas/?hl=fr" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="mailto:rudylucas14000@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
