--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 			<div id="main">
 
 				<!-- One -->
-					<section id="one">
-						<header class="major">
+					<section id="one" style="text-align: center;">
+						<header class="major" >
 							<h2>Curriculum Vitae</h2>
 						</header>
 						<p>Je suis actuellement étudiante en Licence Professionnelle Management de Projet Informatique et Commercial à l'IUT de LANNION</p>
@@ -99,7 +99,7 @@
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
 <!-- 								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a> -->
-								<h2></h2>
+								<h2>&nbsp;</h2>
 								<ul>
 									<li><p>Voyager</p></li>
 									<li><p>Cuisiner</p></li>
@@ -129,24 +129,6 @@
 									<li><input type="submit" value="Envoyer le message" /></li>
 								</ul>
 							</div>
-<!-- 							<div class="4u$ 12u$(small)">
-								<ul class="labeled-icons">
-									<li>
-										<h3 class="icon fa-home"><span class="label">Address</span></h3>
-										1234 Somewhere Rd.<br />
-										Nashville, TN 00000<br />
-										United States
-									</li>
-									<li>
-										<h3 class="icon fa-mobile"><span class="label">Phone</span></h3>
-										000-000-0000
-									</li>
-									<li>
-										<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
-										<a href="#">hello@untitled.tld</a>
-									</li>
-								</ul>
-							</div> -->
 						</div>
 					</section>
 			</div>
