--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/photocv.JPG" alt="" /></a>
+					<a href="#" class="image avatar"><img src="images/photocv.JPG" alt="photoRudyLUCAS" /></a>
 					<h1><strong>Rudy LUCAS</strong></h1>
 					<p>543 rue de l’Exode 50 000 SAINT-LO <br />Née le 28/09/1995 <br />Tél : 06.36.66.99.10 <br />Email : rudylucas14000@gmail.com <br />Titulaire du PERMIS B </p>
 				</div>
